# OpenCTI-MCP-Server

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: ENDPOINTS.md
skills/opencti-usage/: SKILL.md
skills/opencti-usage/references/: admin-connectors.md  api-and-graphql.md  confidence-and-scoring.md  containers.md  data-model.md  entities.md  indicators-vs-observables.md  markings-and-tlp.md  mcp-tool-map.md  rbac-and-orgs.md  relationships.md
src/opencti_mcp/: client.py  config.py  errors.py  server.py
src/opencti_mcp/tools/: __init__.py  _common.py  attack_patterns.py  campaigns.py  cases.py  graphql.py  identities.py  incidents.py  indicators.py  intrusion_sets.py  labels_markings.py  malware.py  observables.py  platform.py  relationships.py  reports.py  search.py  stix_bundle.py  threat_actors.py  tools.py  vulnerabilities.py
tests/: test_array_param_invocation.py  test_array_param_schema.py  test_client.py  test_common_factories.py  test_config.py  test_enhancements.py  test_graphql_tool.py  test_identities.py  test_indicators.py  test_labels_markings.py  test_observables.py  test_platform.py  test_register_all.py  test_reports_rel_cases.py  test_server.py  test_simple_domains.py  test_slim.py  test_stix_bundle.py  test_tool_invocation.py
