[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opencti-mcp"
version = "0.1.0"
description = "MCP server exposing the OpenCTI threat-intelligence platform to AI assistants."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kierston Grantham" }]
keywords = ["opencti", "mcp", "model-context-protocol", "threat-intelligence", "cti", "stix", "fastmcp", "pycti", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastmcp>=2.0.0,<3.0",
    "pycti>=6.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
opencti-mcp = "opencti_mcp.server:main"

[project.urls]
Homepage = "https://github.com/Space-C0wboy/OpenCTI-MCP-Server"
Repository = "https://github.com/Space-C0wboy/OpenCTI-MCP-Server"
Issues = "https://github.com/Space-C0wboy/OpenCTI-MCP-Server/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/opencti_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
